--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body,
 
 header h1{
   font-family: BricolageGrotesque-Bold;
+  color: var(--heading-color);
 }
 
 .intro{
@@ -45,6 +46,7 @@ header h1{
 .intro .intro--text{
   font-size: 2.5rem;
   font-family: BricolageGrotesque-Bold;
+  color: var(--heading-color);
 }
 .intro .intro--search{
   margin-top: 2rem;
