--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,11 @@ header h1{
   color: var(--bg-card);
   cursor: pointer;
 }
+.intro .intro--search button:hover{
+  background-color: var(--bg-card);
+  color: var(--heading-color);
+  transition: all 0.3s linear;
+}
 .status-message {
   margin-top: 1rem;
   font-family: DMSans-Medium;
